# Terminal_Messenger

./: .doit.db  .flake8  MANIFEST.IN  MANIFEST.in  Pipfile  README.md  dodo.py  msg.pot  pyproject.toml  test_client.py  test_server.py
common/: __init__.py
docs/: conf.py  index.rst
docs/_build/doctrees/: API.doctree  environment.pickle  index.doctree
docs/_build/html/: API.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
msg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
msg/client/: .flake8  __init__.py  __main__.py
msg/common/: __init__.py
msg/docs/_build/html/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
msg/docs/_build/html/_sources/: API.rst.txt
msg/server/: .flake8  __init__.py
po/ru_RU.UTF-8/LC_MESSAGES/: msg.mo  msg.po
